Bug 245135 Mozilla forgets what the current profile is when it gets renamed p=brian.lu@sun.com r=ccarlen@mac.com sr=me